k8s/gateway-learner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-learner-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway-learner
  template:
    metadata:
      labels:
        component: gateway-learner
    spec:
      containers:
        - name: gateway-learner
          image: mikedutuandu/gateway_learner
          ports:
            - containerPort: 5002
