k8s/gateway-teacher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-teacher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway-teacher
  template:
    metadata:
      labels:
        component: gateway-teacher
    spec:
      containers:
        - name: gateway-teacher
          image: mikedutuandu/gateway_teacher
          ports:
            - containerPort: 5001
