k8s/gateway_learner_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway_learner_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway_learner
  template:
    metadata:
      labels:
        component: gateway_learner
    spec:
      containers:
        - name: gateway_learner
          image: mikedutuandu/gateway_learner
          ports:
            - containerPort: 5002
