k8s/gateway_teacher_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway_teacher_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway_teacher
  template:
    metadata:
      labels:
        component: gateway_teacher
    spec:
      containers:
        - name: gateway_teacher
          image: mikedutuandu/gateway_teacher
          ports:
            - containerPort: 5001
