k8s/micro-booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-booking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: micro-booking
  template:
    metadata:
      labels:
        component: micro-booking
    spec:
      containers:
        - name: micro-booking
          image: mikedutuandu/micro_booking
          ports:
            - containerPort: 3003
