k8s/micro-learner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro_learner_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: micro-learner
  template:
    metadata:
      labels:
        component: micro-learner
    spec:
      containers:
        - name: micro-learner
          image: mikedutuandu/micro_learner
          ports:
            - containerPort: 3002
