k8s/micro-teacher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-teacher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: micro-teacher
  template:
    metadata:
      labels:
        component: micro-teacher
    spec:
      containers:
        - name: micro-teacher
          image: mikedutuandu/micro_teacher
          ports:
            - containerPort: 3001
