k8s/micro_booking_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro_booking_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: micro_booking
  template:
    metadata:
      labels:
        component: micro_booking
    spec:
      containers:
        - name: micro_booking
          image: mikedutuandu/micro_booking
          ports:
            - containerPort: 3003
