k8s/micro_teacher_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro_teacher_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: micro_teacher
  template:
    metadata:
      labels:
        component: micro_teacher
    spec:
      containers:
        - name: micro_teacher
          image: mikedutuandu/micro_teacher
          ports:
            - containerPort: 3001
