k8s/gateway-learner-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-learner-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateway-learner
  ports:
    - port: 5002
      targetPort: 5002
