k8s/gateway_teacher_cluster_ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway_teacher_cluster_ip_service
spec:
  type: ClusterIP
  selector:
    component: gateway_teacher
  ports:
    - port: 5001
      targetPort: 5001
