k8s/micro-booking-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-booking-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: micro-booking
  ports:
    - port: 3003
      targetPort: 3003
