k8s/micro-teacher-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-teacher-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: micro-teacher
  ports:
    - port: 3001
      targetPort: 3001
