k8s/micro_booking_cluster_ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro_booking_cluster_ip_service
spec:
  type: ClusterIP
  selector:
    component: micro_booking
  ports:
    - port: 3003
      targetPort: 3003
