k8s/micro_learner_cluster_ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro_learner_cluster_ip_service
spec:
  type: ClusterIP
  selector:
    component: micro_learner
  ports:
    - port: 3002
      targetPort: 3002
