k8s/micro_teacher_cluster_ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro_teacher_cluster_ip_service
spec:
  type: ClusterIP
  selector:
    component: micro_teacher
  ports:
    - port: 3001
      targetPort: 3001
