k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - mikedutuandu.com
        - www.mikedutuandu.com
      secretName: mikedutuandu-com
  rules:
    - host: mikedutuandu.com
      http:
        paths:
          - path: /teacher/?(.*)
            backend:
              serviceName: gateway_teacher_cluster_ip_service
              servicePort: 5001
          - path: /learner/?(.*)
            backend:
              serviceName: gateway_learner_cluster_ip_service
              servicePort: 5002
    - host: www.mikedutuandu.com
      http:
        paths:
          - path: /teacher/?(.*)
            backend:
              serviceName: gateway_teacher_cluster_ip_service
              servicePort: 5001
          - path: /learner/?(.*)
            backend:
              serviceName: gateway_learner_cluster_ip_service
              servicePort: 5002
